test/parsetest/invalid/function_calls6.java

class foo {
  public void a() {
    foo(00);
  }
}
